docs: finalized project with executed notebooks and creative readme

--- a/notebooks/Task_3_Hypothesis_Testing.ipynb
+++ b/notebooks/Task_3_Hypothesis_Testing.ipynb
@@ -11,14 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-07T21:55:26.000734Z",
+     "iopub.status.busy": "2025-12-07T21:55:26.000734Z",
+     "iopub.status.idle": "2025-12-07T21:55:41.095683Z",
+     "shell.execute_reply": "2025-12-07T21:55:41.095683Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from: ../data/raw/MachineLearningRating.txt\n",
+      "Loading data from: ../data/raw/MachineLearningRating.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Data Ready. Shape: (1000098, 54)\n"
      ]
     }
@@ -64,14 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-07T21:55:41.097148Z",
+     "iopub.status.busy": "2025-12-07T21:55:41.097148Z",
+     "iopub.status.idle": "2025-12-07T21:55:41.296370Z",
+     "shell.execute_reply": "2025-12-07T21:55:41.296370Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-Value: 5.925510718204678e-19\n",
+      "P-Value: 5.925510718204678e-19"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Reject Null Hypothesis: Significant difference exists.\n",
       "\n",
       "Insight: Risk is NOT uniform. Some provinces have significantly higher claim rates. Stratify pricing by Province.\n"
@@ -99,8 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-07T21:55:41.299778Z",
+     "iopub.status.busy": "2025-12-07T21:55:41.299778Z",
+     "iopub.status.idle": "2025-12-07T21:55:42.159770Z",
+     "shell.execute_reply": "2025-12-07T21:55:42.159770Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -136,8 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-07T21:55:42.161936Z",
+     "iopub.status.busy": "2025-12-07T21:55:42.161936Z",
+     "iopub.status.idle": "2025-12-07T21:55:42.953331Z",
+     "shell.execute_reply": "2025-12-07T21:55:42.952312Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -172,8 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-07T21:55:42.955619Z",
+     "iopub.status.busy": "2025-12-07T21:55:42.955619Z",
+     "iopub.status.idle": "2025-12-07T21:55:43.156416Z",
+     "shell.execute_reply": "2025-12-07T21:55:43.156416Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,17 +232,6 @@
       "Fail to Reject Null: No significant difference in means.\n",
       "\n",
       "Insight: Gender is NOT a significant risk factor. Consider removing it from the rating model (fairness).\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -233,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
