docs: fresh execute of all notebooks (EDA, Hypothesis, Modeling)

--- a/notebooks/Task_3_Hypothesis_Testing.ipynb
+++ b/notebooks/Task_3_Hypothesis_Testing.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-07T21:55:26.000734Z",
-     "iopub.status.busy": "2025-12-07T21:55:26.000734Z",
-     "iopub.status.idle": "2025-12-07T21:55:41.095683Z",
-     "shell.execute_reply": "2025-12-07T21:55:41.095683Z"
+     "iopub.execute_input": "2025-12-07T22:18:27.054869Z",
+     "iopub.status.busy": "2025-12-07T22:18:27.054869Z",
+     "iopub.status.idle": "2025-12-07T22:18:46.064972Z",
+     "shell.execute_reply": "2025-12-07T22:18:46.064972Z"
     }
    },
    "outputs": [
@@ -80,10 +80,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-07T21:55:41.097148Z",
-     "iopub.status.busy": "2025-12-07T21:55:41.097148Z",
-     "iopub.status.idle": "2025-12-07T21:55:41.296370Z",
-     "shell.execute_reply": "2025-12-07T21:55:41.296370Z"
+     "iopub.execute_input": "2025-12-07T22:18:46.067524Z",
+     "iopub.status.busy": "2025-12-07T22:18:46.067524Z",
+     "iopub.status.idle": "2025-12-07T22:18:46.301207Z",
+     "shell.execute_reply": "2025-12-07T22:18:46.301207Z"
     }
    },
    "outputs": [
@@ -91,14 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-Value: 5.925510718204678e-19"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "P-Value: 5.925510718204678e-19\n",
       "Reject Null Hypothesis: Significant difference exists.\n",
       "\n",
       "Insight: Risk is NOT uniform. Some provinces have significantly higher claim rates. Stratify pricing by Province.\n"
@@ -129,10 +122,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-07T21:55:41.299778Z",
-     "iopub.status.busy": "2025-12-07T21:55:41.299778Z",
-     "iopub.status.idle": "2025-12-07T21:55:42.159770Z",
-     "shell.execute_reply": "2025-12-07T21:55:42.159770Z"
+     "iopub.execute_input": "2025-12-07T22:18:46.306032Z",
+     "iopub.status.busy": "2025-12-07T22:18:46.306032Z",
+     "iopub.status.idle": "2025-12-07T22:18:47.192347Z",
+     "shell.execute_reply": "2025-12-07T22:18:47.191964Z"
     }
    },
    "outputs": [
@@ -173,10 +166,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-07T21:55:42.161936Z",
-     "iopub.status.busy": "2025-12-07T21:55:42.161936Z",
-     "iopub.status.idle": "2025-12-07T21:55:42.953331Z",
-     "shell.execute_reply": "2025-12-07T21:55:42.952312Z"
+     "iopub.execute_input": "2025-12-07T22:18:47.196187Z",
+     "iopub.status.busy": "2025-12-07T22:18:47.195683Z",
+     "iopub.status.idle": "2025-12-07T22:18:48.082447Z",
+     "shell.execute_reply": "2025-12-07T22:18:48.081850Z"
     }
    },
    "outputs": [
@@ -216,10 +209,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-07T21:55:42.955619Z",
-     "iopub.status.busy": "2025-12-07T21:55:42.955619Z",
-     "iopub.status.idle": "2025-12-07T21:55:43.156416Z",
-     "shell.execute_reply": "2025-12-07T21:55:43.156416Z"
+     "iopub.execute_input": "2025-12-07T22:18:48.083462Z",
+     "iopub.status.busy": "2025-12-07T22:18:48.083462Z",
+     "iopub.status.idle": "2025-12-07T22:18:48.257755Z",
+     "shell.execute_reply": "2025-12-07T22:18:48.256412Z"
     }
    },
    "outputs": [
